feat(bulk-delete): implement bulk delete functionality with error handling
- Added `BulkDeleteResultResponse` to encapsulate results of bulk delete operations, including lists of deleted and failed IDs along with error details.
- Enhanced `ComponentService` and `PageTemplateService` with methods for bulk deletion, ensuring each deletion occurs in its own transaction for partial commit semantics.
- Introduced `BulkDeleteExceptionMapper` to handle exceptions during bulk deletions and provide meaningful error messages.
- Updated `AuthenticationService` to support a new `rememberMe` parameter in authentication methods, improving user experience.
- Created `PlatformRefreshToken` and `RefreshToken` entities along with their respective repositories and mappers for managing refresh tokens effectively.
- Adjusted JWT handling to accommodate the new `rememberMe` functionality, extending token expiration as needed.